RESOLVED FIXED293858
outlook.com: [2FA] On Authenticator UI, the number is not centered
https://bugs.webkit.org/show_bug.cgi?id=293858
Summary outlook.com: [2FA] On Authenticator UI, the number is not centered
alan
Reported 2025-05-31 13:43:23 PDT
Attachments
[fast-cq]Patch (3.57 KB, patch)
2025-05-31 13:51 PDT, alan
no flags
alan
Comment 1 2025-05-31 13:51:00 PDT
Created attachment 475437 [details] [fast-cq]Patch
EWS
Comment 2 2025-06-02 07:27:57 PDT
Committed 295682@main (54b3e659b497): <https://commits.webkit.org/295682@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 475437 [details].
Note You need to log in before you can comment on or make changes to this bug.