outlook.com: [2FA] On Authenticator UI, the number is not centered https://bugs.webkit.org/show_bug.cgi?id=293858 <rdar://152312089>

Reviewed by Antti Koivisto.

Range builder, where the text content is nested inside an inline box (e.g. <div><span>text</span></div>) uses the inline box's style as root style. This does not work well
when root's text-align does not match with the inline box's value.

* Source/WebCore/layout/formattingContexts/inline/RangeBasedLineBuilder.cpp:
(WebCore::Layout::RangeBasedLineBuilder::isEligibleForRangeInlineLayout):

Canonical link: https://commits.webkit.org/295682@main